Fix: Text overflow of experience in sm Add line height of experience to fit the small screen

--- a/_sass/layout/experience.scss
+++ b/_sass/layout/experience.scss
@@ -26,7 +26,7 @@
   ul {
     li {
       font-size: 1.1rem;
-      height: 5rem;
+      height: 8rem;
 
       &:nth-child(odd) {
         background-color: var(--main-bg, #ffffff);
@@ -38,9 +38,9 @@
     &::before {
       @extend %timeline;
 
-      top: 2.5rem;
+      top: 4.2rem;
       left: 114px;
-      height: 10.1rem;
+      height: 16.01rem;
     }
 
     .flex {
